force-app/main/default/objects/CourseOffering__c/CourseOffering__c.object-meta.xml
<CustomObject>
    <label>CourseOffering</label>
    <nameField>
        <label>CourseOffering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CourseOfferings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>