force-app/main/default/objects/CourseOffering__c/fields/collegeOrUniversity__c.field-meta.xml
<CustomField>
    <fullName>collegeOrUniversity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>college/University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CourseOfferings</relationshipLabel>
    <relationshipName>CourseOfferings</relationshipName>
    <type>Lookup</type>
</CustomField>