force-app/main/default/objects/CourseOffering__c/fields/Course_Offering_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_ID__c</fullName>
    <label>Course Offering ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>