force-app/main/default/objects/CourseOffering__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CourseOfferings</relationshipLabel>
    <relationshipName>CourseOfferings</relationshipName>
    <type>Lookup</type>
</CustomField>