force-app/main/default/objects/CourseOffering__c/fields/Module10_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Module10_Due_Date__c</fullName>
    <label>Module10 Due Date</label>
    <type>Date</type>
</CustomField>