force-app/main/default/objects/CourseOffering__c/fields/Module11_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Module11_Due_Date__c</fullName>
    <label>Module11 Due Date</label>
    <type>Date</type>
</CustomField>