force-app/main/default/objects/CourseOffering__c/fields/Module12_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Module12_Due_Date__c</fullName>
    <label>Module12 Due Date</label>
    <type>Date</type>
</CustomField>