force-app/main/default/objects/CourseOffering__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>