force-app/main/default/objects/CourseOffering__c/recordTypes/Internship.recordType-meta.xml
<RecordType>
    <fullName>Internship</fullName>
    <active>true</active>
    <label>Internship</label>
</RecordType>