force-app/main/default/objects/CourseOffering__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Course_Offering_ID__c</columns>
    <columns>collegeOrUniversity__c</columns>
    <columns>Batch__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>